--- a/Woong_Android/app/src/main/res/values/strings.xml
+++ b/Woong_Android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!--소비자 회원가입(Join.Consumer.Join1Activity)-->
-    <string name="app_name">웅이감자</string>
+    <string name="app_name">웅아감자팔자</string>
     <string-array name="date_year">
         <item></item>
         <item>1970</item>
